--- a/public/index.html
+++ b/public/index.html
@@ -25,9 +25,10 @@
       Learn how to configure a non-root public URL by running `npm run build`.
 		-->
 		<link
-			href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap"
+			href="https://fonts.googleapis.com/css?family=Dosis:200,300,400,500,600,700,800&display=swap"
 			rel="stylesheet"
 		/>
+
 		<title>React App</title>
 	</head>
 	<body>
